@@ -1,13 +1,26 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.2'
-	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+	id 'org.springframework.boot' version '3.1.5'
+	id 'io.spring.dependency-management' version '1.1.3'
 	id 'java'
+	id 'org.graalvm.buildtools.native' version '0.9.28'
 }
 
 group = 'com.shukap'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
+
+graalvmNative {
+	binaries {
+		main {
+			buildArgs.add('--enable-preview')
+		}
+	}
+}
 repositories {
 	mavenCentral()
 }
